# trpg-discord-bot

./: .env.example  .gitignore  .replit  API_PROVIDERS.md  Cargo.toml  README.md  README_PYTHON.md  config.json.backup  rename_columns.sql  test_config.json
src/: main.rs
src/bot/: data.rs  handler.rs  mod.rs
src/bot/commands/: admin.rs  admin_api_clear.rs  base_settings_search.rs  chat.rs  dice.rs  effect.rs  help.rs  import.rs  logs.rs  memory.rs  mod.rs  prompt.rs  skills.rs  summarize.rs
src/models/: types.rs
src/utils/: api.rs  chat_history.rs  coc.rs  config.rs  conversation.rs  dice.rs  env_watcher.rs  import.rs  logger.rs  memory.rs  mod.rs
trpg-discord-bot-py/: README.md  bot.py  check_files.py  main.py  requirements.txt  scan_files.py  setup.sh
trpg-discord-bot-py/cogs/: admin_cog.py  dice_cog.py  help_cog.py  logs_cog.py  skills_cog.py
trpg-discord-bot-py/models/: database.py  types.py
trpg-discord-bot-py/utils/: coc.py  config.py  dice.py  logger.py
