[package]
name = "trpg-discord-bot"
version = "0.1.0"
edition = "2024"

# Disable deprecation warnings for the entire package
# This is necessary because we're using the deprecated StandardFramework from serenity
# which generates many deprecation warnings that we can't easily fix without major refactoring
[package.metadata.rust]
# We allow deprecated warnings since we're intentionally using deprecated APIs
# for compatibility with the current serenity version
rustflags = ["-A", "deprecated"]

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
rand = "0.8.5"
thiserror = "1.0"
once_cell = "1.19"
tokio-rusqlite = "0.5"
