[package]
name = "trpg-discord-bot"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"     # 明確宣告 MSRV；Edition 2024 需 1.85+ 才能穩定編譯

[lints.rust]              # 用 Cargo 的 lints 表達法關閉整包的 deprecated 警告
deprecated = "allow"

[dependencies]
anyhow = "1"
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process"] }

# 只保留一組 serde / serde_json
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 升級 regex，移除重複
regex = "1.12"

log = { version = "0.4", features = ["std"] }
rand = "0.9"
thiserror = "2"
once_cell = "1.21"

# SQLite/資料庫
tokio-rusqlite = "0.6"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }  # 內建編譯 SQLite，避免系統庫差異

# I/O 與檔案
notify = "8.2"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
csv = "1.4"
calamine = "0.31"   # 讀 Excel，配合 2024 edition 沒問題

# HTTP 用 rustls，避免 Linux 上 OpenSSL 依賴雜訊；也打開常見解壓功能
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json", "gzip", "brotli", "deflate", "zstd"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4"] }
